# clickhouse-aws-workshop

./: .gitignore  AGENT_GUIDE.md  README.md
hands-on/: .env.example  EC2_GENERATOR.md  README.md  pyproject.toml
hands-on/agentic-data-stack/: README.md
hands-on/cloudformation/: README.md  parameters.example.json  template.yaml
hands-on/langfuse/: README.md
hands-on/mock_data/: README.md  config.py  db.py  kinesis_producer.py  run_generators.py  run_migrations.py  seed_rds.py  simulate_cdc.py
hands-on/scripts/: ec2_bootstrap.sh  generator_ec2.sh
hands-on/sql/aurora/: 01_setup.sql
hands-on/sql/clickhouse/: 01_materialized_views.sql  02_demo_queries.sql
hands-on/terraform/: .terraform.lock.hcl  README.md  aurora.tf  clickhouse.tf  clickpipes.tf  ec2.tf  kinesis.tf  outputs.tf  privatelink.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
hands-on/terraform/templates/: ec2_user_data.sh.tftpl
